# pyatomix

./: README.md  pyproject.toml
.github/workflows/: publish_wheels.yml
atomix_base/: atomix_base.pyi  meson.build  pyproject.toml  setup.py
atomix_base/src/: main.cpp
atomix_base/stubs/: atomix_base.pyi
pyatomix/: __init__.py
