[build-system]
requires = [
    "setuptools>=68.0.0",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp310-manylinux* cp311-manylinux* cp312-manylinux* cp313-manylinux* pp310-manylinux* cp310-win_amd64* cp311-win_amd64* cp312-win_amd64* cp313-win_amd64* pp310-win_amd64*"
free-threaded-support = true
manylinux-x86_64-image = "manylinux_2_28"
manylinux-i686-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"
manylinux-armv7l-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
manylinux-pypy_i686-image = "manylinux_2_28"
manylinux-pypy_aarch64-image = "manylinux_2_28"
