[build-system]
requires = [
    "setuptools>=68.0.0",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "cp310-manylinux_x86_64* cp311-manylinux_x86_64* cp312-manylinux_x86_64* cp313-manylinux_x86_64* cp313t-manylinux_x86_64* pp310-manylinux_x86_64* cp310-win_amd64* cp311-win_amd64* cp312-win_amd64* cp313-win_amd64* pp310-win_amd64* cp313t-win_amd64*"
free-threaded-support = true
manylinux-x86_64-image = "manylinux_2_28"
manylinux-pypy_x86_64-image = "manylinux_2_28"
